--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1, h2, h3 {
     padding-bottom:10px;
     margin-top: 21px;
     margin-bottom: 10.5px;
-    
+    display:block;    
 }
 
 h2{
@@ -111,6 +111,7 @@ h3{
     font-weight: 300;
     line-height: 1.4;
     color: #4c4a48;
+    padding-right: 20px;
 }
 
 .ingress span{
@@ -121,6 +122,8 @@ h3{
     padding-top:20px;
     padding-bottom:10px;
     font-size: 12pt;
+    display:block;
+    padding-right: 20px;
 }
 
 .mid{
