--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
     height: 100%;
 }
 
-@media only screen and (max-width: 92px) {
+@media only screen and (max-width: 940px) {
     .width-adjuster {
         width: 100%
     }
@@ -71,6 +71,12 @@ body{
 /* GENERIC STYLING */
 
 
+h1, h2, h3,h4 {
+    color: #777368;
+    font-family: 'Roboto Condensed', sans-serif;
+    display:block;    
+}
+
 h1, h2, h3 {
     color: #777368;
     font-family: 'Roboto Condensed', sans-serif;
@@ -78,7 +84,6 @@ h1, h2, h3 {
     padding-bottom:10px;
     margin-top: 21px;
     margin-bottom: 10.5px;
-    display:block;    
 }
 
 h2{
@@ -132,7 +137,12 @@ h3{
     font-size: 0;
 
 }
-
+@media only screen and (max-width: 740px) {
+    .mid {
+        width: 100%;
+        max-width: 100%;
+    }
+}
 
 
 .section img{
@@ -148,6 +158,13 @@ h3{
     vertical-align: top;
 }
 
+@media only screen and (max-width: 740px) {
+    .sidebar {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
 .sidebar .section{
     width:100%;
     margin-bottom:10px;
@@ -158,6 +175,14 @@ h3{
     border: 1px solid #e2e3e4;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    word-wrap: break-word;
+}
+
+.sidebar h3{
+    padding-bottom:0px;
+    margin:0px;
+    margin-top:5px;
+    margin-bottom:5px;
 }
 
 .sidebar  h2{
