--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ h3{
     font-size: 19px;
 }
 
+p{
+    margin-bottom: 15px;
+}
+
 .page-header{
     margin-top: .5em;
     border-bottom: 1px solid #eee;
@@ -147,8 +151,9 @@ h3{
 
 .section img{
     max-width: 300px;  
-    float:left; 
+    float:left;
     margin-right: 20px; 
+    margin-bottom: 20px; 
 
 }
 
@@ -169,7 +174,7 @@ h3{
     width:100%;
     margin-bottom:10px;
     background:lightgrey;
-    display:inline-block;
+    display:block;
     padding:20px;
     background-color: #f5f5f5;
     border: 1px solid #e2e3e4;
