--- a/style.css
+++ b/style.css
@@ -148,6 +148,45 @@ p{
     }
 }
 
+.biglink{
+    font-size: 14pt;
+    padding: 20px;
+    display: inline-block;
+    margin-top: 10px;
+    text-decoration: none;
+    width:365px;
+}
+
+.downloadlink{
+    color: white;
+    background: #4c4a48;
+}
+
+.artskartlink{
+    color: black;
+    background: lightgrey;
+}
+
+.biglink:hover{
+    opacity:0.7;
+}
+
+.biglink span {
+    padding: 10px;
+    vertical-align: middle;
+    border-bottom:2px solid white;
+    padding-bottom: 2px;
+}
+
+.biglink span:first-child {
+    border-bottom: 2px solid transparent;
+    font-size: 44px;
+    background: white;
+    margin-right: 5px;
+    border-radius: 50%;
+    color: #4c4a48;
+}
+
 
 .section img{
     max-width: 300px;  
