--- a/style.css
+++ b/style.css
@@ -450,3 +450,60 @@ p{
     display:block;
     font-size:10pt;
 }
+
+/* HEADER MENU*/
+
+nav{
+    display: inline-block;
+    top: 0;
+    position: absolute;
+    right: 20px;
+}
+
+.menuitems{
+    display:inline-block;
+    height:50px;
+    background-color: #3d3b3a;
+    padding: 10px 15px;
+    padding-bottom: 14px;
+    padding-top: 1em;
+    font-family: "Roboto Condensed";
+    color:white;
+    text-decoration: underline;
+    margin-right:2px;
+    position: relative;
+    border:0;
+}
+
+.dropdown{
+    position:absolute;
+    top:50px;
+    right:0px;
+    border: 1px solid rgba(0,0,0,.15);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    min-width: 160px;
+    padding: 5px 0;
+    font-size: 15px;
+    text-align: left;
+    background-color: #fff;
+}
+
+.dropdown li a {
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333333;
+    white-space: nowrap;
+    font-size: 16px;
+    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    margin: 8px 0;
+    display: block;
+    text-decoration: none;
+
+}
+
+#Omoss{
+    display:block;
+}
