--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
     max-width: 1440px;
     margin: auto;
     height: 100%;
+    position: relative;
 }
 
 @media only screen and (max-width: 940px) {
@@ -65,6 +66,49 @@ body{
         width:100%;
         margin-left:auto;
     }
+
+    .sidebarmenu{
+        display:none;
+    }
+}
+
+.sidebarmenu{
+    float: left;
+    width:25%;
+    margin-top: 15px;
+    left:0px;
+    width:25%;
+    top:0px;
+    font-size: 12pt;
+    height:100%;
+    padding:15px;
+}
+
+
+
+.sidebarmenu ul{
+    font-family: "Roboto Condensed";
+    padding-right: 1em;
+    border-right: 1px solid #cecfd1;
+}
+
+.sidebarmenu li{
+    display:block;
+    width:100%;
+    padding: .5em 0 .5em 1em;
+    border-top: 1px solid #e4e3e2;    
+    font-family: "Roboto Condensed";
+}
+
+.sidebarmenu li.lead{
+    font-size: 22.5px;
+    padding-left:0px;
+    border-top:0;
+}
+
+.sidebarmenu li a{
+    text-decoration: none;
+    color: #4c4a48;
 }
 
 /* GENERIC STYLING */
