--- a/style.css
+++ b/style.css
@@ -599,13 +599,17 @@ body.freeze-scroll {
     padding: 10px;
     height: 100vh;
     width:100vw;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0,0,0,0.7);    
+    text-align: center;
 }
 
 .fullscreen img{
-    width:100%;
+    margin:auto;
     padding:10px;
-    max-width: 100%;
+    max-width:100%;
+    max-height:100%;
+    height: auto;
+    width:auto;
 }
 
 #fullscreenbutton{
@@ -628,10 +632,11 @@ body.freeze-scroll {
         }
 }
 
+/*
 .fullscreen #fullscreenbutton{
     right: 25px;
     top: 25px;
-}
+}*/
 
 #fullscreenbutton:hover{
     background:black;
