--- a/style.css
+++ b/style.css
@@ -566,6 +566,13 @@ nav{
     text-decoration: none;
 }
 
+.dropdown li a:active,
+.dropdown li a:focus,
+.dropdown li a:hover{
+    color: #de8718;
+    background-color: #f5f5f5;
+}
+
 .dropdown li a span{
     font-weight: 400;
     font-size: 15px;
