--- a/style.css
+++ b/style.css
@@ -648,6 +648,9 @@ nav{
     background:grey;
 }
 
+.show{
+    display:block
+}
 @media only screen and (max-width: 766px){
 
     .normal{display:none}
@@ -659,10 +662,9 @@ nav{
     nav{
         height:0px;
     }
-
+    
     #headermenu{
         right:0px;
-        visibility:visible;
         box-sizing: border-box;
         height:auto;
         width:100%;
@@ -673,8 +675,14 @@ nav{
         top:50px;
         border-top:1px solid #3a3837;
         box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
-        display:none;
+    }
 
+    .show{
+        display:block
+    }
+
+    .hide{
+        display:none;
     }
 
     .menuitems{
