menu, breadcrumbs languageselector

--- a/style.css
+++ b/style.css
@@ -156,10 +156,6 @@ footer table td:first-child {
         width:100%;
         margin-left:auto;
     }
-
-    .sidebarmenu{
-        display:none;
-    }
 }
 
 .sidebarmenu{
@@ -204,6 +200,51 @@ footer table td:first-child {
     padding-left: 5px;
     vertical-align: top;
     font-size: inherit;
+}
+
+.breadcrumbdivider{
+    display:none;
+}
+@media only screen and (max-width: 940px) {
+    .sidebarmenu{
+        display:inline-block;
+        width:100%;
+        max-width:500px;
+        margin:0;
+        padding:0px;
+        margin-bottom:10px;
+        padding-left:15px;
+    }
+    
+    .sidebarmenu ul{
+        border:none;
+    }
+
+    .sidebarmenu li.in-breadcrumb{
+        display: inline-block;
+        width: auto;
+        border: none;
+        font-size: 12pt;
+        text-decoration: underline;
+        color: #1b57a9;
+        padding:0px;
+    }
+
+    .sidebarmenu li.in-breadcrumb a{
+        color:inherit
+    }
+
+    .sidebarmenu li.not-in-breadcrumb{
+        display:none;
+    }
+
+    .breadcrumbdivider{
+        display:inline;
+        padding: 0 5px;
+        color: #ccc;
+        border-bottom:none;
+    
+    }
 }
 
 /* GENERIC STYLING */
@@ -877,5 +918,37 @@ body.freeze-scroll {
 }
 
 
+.languageselector{
+    float: right;
+    padding-right: 20px;
+}
+
+.languageselector button{
+   border:none;
+   background:none;
+   font-size: 12pt;
+   color:#4c4a48;
+   font-family: 'Roboto Condensed', sans-serif;
+   padding:0px;
+   margin:5px;
+}
+
+.languageselector .lang-chosen{
+    color:black;
+    border-bottom:2px solid black;
+}
 
 
+.languageselector button:hover{
+    cursor:pointer;   
+    border-bottom:2px solid #7e7b79;
+}
+
+@media only screen and (max-width: 650px){
+
+    .languageselector{
+        float:none;
+        width:100%;
+        margin-left:10px;
+    }
+}
