--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ p{
     font-size: 12pt;
     display:block;
     padding-right: 20px;
+    width: auto;
     max-width: 100%;
     box-sizing: border-box;
 }
