--- a/style.css
+++ b/style.css
@@ -204,6 +204,45 @@ footer table td:first-child {
     }
 }
 
+/* BREADCRUMBS*/
+
+.breadcrumbs{
+    display:inline-block;
+    width:100%;
+    max-width:400px;
+    margin:0;
+    padding:0px;
+    margin-bottom:10px;
+    padding-left:15px;
+}
+
+.breadcrumbs ul{
+    font-family: "Roboto Condensed";
+    padding-right: 1em;
+}
+
+.breadcrumbs li{
+    display: inline-block;
+    padding: .5em 0 .5em 1em;  
+    font-family: "Roboto Condensed";
+    font-size: 12pt;
+    text-decoration: underline;
+    color: #1b57a9;
+    padding:0px;
+}
+
+.breadcrumbs li a{
+    color:inherit
+}
+
+.breadcrumbdivider{
+    display:inline;
+    padding: 0 5px;
+    color: #ccc;
+    border-bottom:none;
+}
+
+
 /* GENERIC STYLING */
 
 
@@ -432,143 +471,12 @@ p{
 }
 
 .biglink span:first-child {
-    border-bottom: 2px solid transparent;
-    
+    border-bottom: 2px solid transparent;    
 }
-
-/*
-@media only screen and (max-width: 740px) {
-    .biglink span:nth-child(3)::before ,
-    .biglink span:nth-child(2)::before {
-        content:"\a";
-        white-space: pre;
-        height:10px;
-        display:block;
-    }
-
-    .biglink span:nth-child(3),
-    .biglink span:nth-child(2) {
-        padding:0px;
-        
-    }
-    .biglink span:nth-child(3) {
-        color: #bdbdbd;
-        border: 0px;
-    }
-
-}*/
-
 
 #citation{
     font-size: 10pt;
 }
-
-.progressbar{
-    margin-top:50px;
-    margin-bottom:90px;
-    height:10px;
-    position:relative;
-    background:#d0d0cf;
-    width:100%;
-    font-size: 0;
-}
-
-#progressindicator{
-    height:10px;
-    top:0;
-    left:0;
-    width:0;
-    background:#777368;
-    position:absolute;
-    margin:0;
-    border:0;
-}
-
-.progressbar ul{
-    position:absolute;
-    width:100%;
-    left:0;
-    top:-32px;
-    margin:0;
-    padding:0;
-}
-
-.progressbar li{    
-    padding:10px;
-    display:inline-block;
-    text-align: center;
-    box-sizing: border-box;
-    margin:0px;
-    width:33%;
-    font-size:10pt;
-    
-    vertical-align: top;
-}
-
-.progressbar div{
-    display:block;
-    padding:10px;
-    border-radius:50%;
-    background:white;
-    width:50px;
-    height:50px;
-    margin:auto;
-    font-size: 18pt;
-    border:1px solid #777368;
-    color:#777368;
-}
-
-.progressbar .active div,
-.progressbar .done div{
-    background:#777368;
-    color:white;
-    border:1px solid black;
-}
-
-@media only screen and (max-width: 270px) {
-
-    .progressbar b{
-        display:none;
-    }
-
-    .progressbar span {    
-        margin-top: -10px;
-        display: block;
-    }
-
-    .progressbar .active span {    
-        margin-top: -72px;
-        margin-left: -15px;    
-    }
-
-    .progressbar div{
-        width: 35px;
-        height: 35px;
-        font-size: 12pt;
-        padding: 7px;
-    }
-    
-    .progressbar ul {       
-        top: -25px;
-    }
-
-    .progressbar {
-        margin-bottom: 20px;
-    }
-}
-
-#notyetvalid{
-    width:100%;
-}
-
-#submittedtext,
-#createdtext,
-#publiserttext,
-#notyetvalid{
-    display:none;
-}
-
-
 
 .doilink{
     display: block;
