add breadcrumbs to layoutcss

--- a/layout.css
+++ b/layout.css
@@ -167,6 +167,11 @@ p{
     }
 }
 
+.mid div,
+.mid table{
+    font-size:12pt;
+}
+
 /* SIDEBAR Right side (grey boxes) */
 
 .sidebar{
@@ -204,4 +209,42 @@ p{
 
 .sidebar  h2{
     margin-top:0;
+}
+
+/* BREADCRUMBS*/
+
+.breadcrumbs{
+    display:inline-block;
+    width:100%;
+    max-width:400px;
+    margin:0;
+    padding:0px;
+    margin-bottom:10px;
+    padding-left:15px;
+}
+
+.breadcrumbs ul{
+    font-family: "Roboto Condensed";
+    padding-right: 1em;
+}
+
+.breadcrumbs li{
+    display: inline-block;
+    padding: .5em 0 .5em 1em;  
+    font-family: "Roboto Condensed";
+    font-size: 12pt;
+    text-decoration: underline;
+    color: #1b57a9;
+    padding:0px;
+}
+
+.breadcrumbs li a{
+    color:inherit
+}
+
+.breadcrumbdivider{
+    display:inline;
+    padding: 0 5px;
+    color: #ccc;
+    border-bottom:none;
 }
